--- a/main.css
+++ b/main.css
@@ -1,9 +1,12 @@
-:root{
-  --calendar-color:white;
-  --calendar-background:black;
-}
 
-/* http://meyerweb.com/eric/tools/css/reset/
+:root{
+    --first-color:white;
+    --second-color:black;
+    --third-color: blue;
+    --fourth-color: gray;
+  }
+  
+  /* http://meyerweb.com/eric/tools/css/reset/
    v2.0-modified | 20110126
    License: none (public domain)
 */
